Fixed overflowing badges text

--- a/css/modals.css
+++ b/css/modals.css
@@ -193,7 +193,7 @@ dialog#kanshenmodal {
         margin-bottom: 4px;
     }
     & badge {
-        font-size: 12px;
+        font-size: 10px;
         padding: 4px 8px;
         border-radius: 4px;
         user-select: none;
@@ -223,7 +223,7 @@ dialog#kanshenmodal {
     }
     & gamebadges {
         line-height: 24px;
-        font-size: 12px;
+        font-size: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -347,7 +347,7 @@ dialog#zem0modal {
         margin-bottom: 4px;
     }
     & badge {
-    font-size: 12px;
+    font-size: 10px;
         padding: 4px 8px;
         border-radius: 4px;
         user-select: none;
@@ -377,7 +377,7 @@ dialog#zem0modal {
     };
     & gamebadges {
         line-height: 24px;
-    font-size: 12px;
+    font-size: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -501,7 +501,7 @@ dialog#slovaktasticmodal {
         margin-bottom: 4px;
     }
     & badge {
-    font-size: 12px;
+    font-size: 10px;
         padding: 4px 8px;
         border-radius: 4px;
         user-select: none;
@@ -531,7 +531,7 @@ dialog#slovaktasticmodal {
     }
     & gamebadges {
         line-height: 24px;
-    font-size: 12px;
+    font-size: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -655,7 +655,7 @@ dialog#weixmodal {
         margin-bottom: 4px;
     }
     & badge {
-    font-size: 12px;
+    font-size: 10px;
         padding: 4px 8px;
         border-radius: 4px;
         user-select: none;
@@ -685,7 +685,7 @@ dialog#weixmodal {
     }
     & gamebadges {
         line-height: 24px;
-    font-size: 12px;
+    font-size: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -809,7 +809,7 @@ dialog#tomoproskmodal {
         margin-bottom: 4px;
     }
     & badge {
-    font-size: 12px;
+    font-size: 10px;
         padding: 4px 8px;
         border-radius: 4px;
         user-select: none;
@@ -839,7 +839,7 @@ dialog#tomoproskmodal {
     }
     & gamebadges {
         line-height: 24px;
-    font-size: 12px;
+    font-size: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -959,7 +959,7 @@ dialog#hoštymodal {
         margin-bottom: 4px;
     }
     & badge {
-    font-size: 12px;
+    font-size: 10px;
         padding: 4px 8px;
         border-radius: 4px;
         user-select: none;
@@ -989,7 +989,7 @@ dialog#hoštymodal {
     }
     & gamebadges {
         line-height: 24px;
-    font-size: 12px;
+    font-size: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -1113,7 +1113,7 @@ dialog#oleksmodal {
         margin-bottom: 4px;
     }
     & badge {
-    font-size: 12px;
+    font-size: 10px;
         padding: 4px 8px;
         border-radius: 4px;
         user-select: none;
@@ -1143,7 +1143,7 @@ dialog#oleksmodal {
     }
     & gamebadges {
         line-height: 24px;
-    font-size: 12px;
+    font-size: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -1267,7 +1267,7 @@ dialog#timmodal {
         margin-bottom: 4px;
     }
     & badge {
-    font-size: 12px;
+    font-size: 10px;
         padding: 4px 8px;
         border-radius: 4px;
         user-select: none;
@@ -1297,7 +1297,7 @@ dialog#timmodal {
     }
     & gamebadges {
         line-height: 24px;
-    font-size: 12px;
+    font-size: 10px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -1322,8 +1322,4 @@ span#escape {
 
 dialog gamebadges badge:not(:last-of-type) {
     margin-right: 5px;
-}
-
-dialog right:has(overallbadges) gamebadges {
-    margin-top: 4px;
 }
